added github link on sidebar

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -24,7 +24,7 @@ html(class="no-js" lang="en" dir="ltr")
 
             a(href='/about') Learn More →
             br
-            a(href='/resume') Resume →
+            a(href='https://github.com/GarrettKent/Static-Node-and-Express-Site', target='_blank') GitHub Repo →
 
     .off-canvas-content(data-off-canvas-content='')
       .title-bar.hide-for-large
